# quantixis-rs

./: Cargo.toml  README.md
benches/: evaluation.rs
examples/: batch_evaluation.rs  pre_parsed_ast.rs  simple_expression.rs
quantixis_macros/: Cargo.toml
quantixis_macros/src/: lib.rs
src/: bytecode.expr.pest  expression.pest  lib.rs
src/ast/: compiler.rs  evaluator.rs  function_args.rs  function_result.rs  mod.rs  parser.rs
src/bytecode/: compiler.rs  decoder.rs  encoder.rs  executor.rs  jit_compiler.rs  mod.rs
src/functions/: mod.rs  momentum.rs  other.rs  trend.rs  volatility.rs  volume.rs
src/jit/: builder.rs  compiler.rs  mod.rs  rt_env.rs
src/jit/functions/: mod.rs  pow.rs
